<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="movie"
            type="com.areeb.domain.models.movieDetails.MovieDetails" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@{movie.originalTitle}"
            app:titleTextAppearance="@style/Font500.22sp.white" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="@dimen/size_120"
                    android:layout_height="@dimen/size_180"
                    android:scaleType="centerInside"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loadSrc="@{movie.posterPath}"
                    app:shapeAppearanceOverlay="@style/ImageView.Round" />

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/Font700.18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@{movie.originalTitle}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivPoster" />

                <com.areeb.ui.views.custom.MovieDetailsHeaderInfo
                    android:id="@+id/layoutReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    app:icon="@drawable/ic_calendar"
                    app:label="@string/release_year"
                    app:layout_constraintEnd_toStartOf="@id/layoutDuration"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <com.areeb.ui.views.custom.MovieDetailsHeaderInfo
                    android:id="@+id/layoutDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_duration"
                    app:label="@string/show_duration"
                    app:layout_constraintEnd_toStartOf="@id/layoutRating"
                    app:layout_constraintStart_toEndOf="@id/layoutReleaseDate"
                    app:layout_constraintTop_toTopOf="@id/layoutReleaseDate" />

                <com.areeb.ui.views.custom.MovieDetailsHeaderInfo
                    android:id="@+id/layoutRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_rate_star"
                    app:label="@string/average_rating"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layoutDuration"
                    app:layout_constraintTop_toTopOf="@id/layoutReleaseDate" />

                <View
                    android:id="@+id/layoutBackground"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_0"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@drawable/bg_rounded_corners"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutRating" />

                <TextView
                    android:id="@+id/tvDescriptionLabel"
                    style="@style/Font700.14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_24"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutBackground" />

                <TextView
                    android:id="@+id/tvDescriptionValue"
                    style="@style/Font400.14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@{movie.overview}"
                    app:layout_constraintTop_toBottomOf="@id/tvDescriptionLabel" />

                <com.areeb.ui.views.custom.MovieDetailsRow
                    android:id="@+id/layoutGenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    app:label="@string/genres"
                    app:layout_constraintTop_toBottomOf="@id/tvDescriptionValue" />

                <com.areeb.ui.views.custom.MovieDetailsRow
                    android:id="@+id/layoutProductionCompanies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    app:label="@string/production_company"
                    app:layout_constraintTop_toBottomOf="@id/layoutGenres" />

                <com.areeb.ui.views.custom.MovieDetailsRow
                    android:id="@+id/layoutProductionCountries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    app:label="@string/production_country"
                    app:layout_constraintTop_toBottomOf="@id/layoutProductionCompanies" />

                <com.areeb.ui.views.custom.MovieDetailsRow
                    android:id="@+id/layoutSpokenLanguages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginBottom="@dimen/margin_16"
                    app:label="@string/spoken_languages"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutProductionCountries"
                    app:layout_constraintVertical_bias="0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
